refactor: router response dto 추가 및 일부 함수 이름 수정
