# docs/swagger.yaml
@@ -1,18 +1,5 @@
 components:
   schemas:
-    domain.Todo:
-      properties:
-        content:
-          type: string
-        created_at:
-          type: string
-        id:
-          type: string
-        title:
-          type: string
-        updated_at:
-          type: string
-      type: object
     request.CreateTodoReq:
       properties:
         content:
@@ -21,12 +8,32 @@ components:
         title:
           example: sample title
           type: string
+      required:
+      - title
       type: object
     response.ErrorRes:
       properties:
         message:
           type: string
       type: object
+    response.TodoRes:
+      properties:
+        Content:
+          type: string
+        createdAt:
+          type: string
+        id:
+          type: string
+        title:
+          type: string
+        updatedAt:
+          type: string
+      type: object
+  securitySchemes:
+    ApiKeyAuth:
+      in: header
+      name: Authorization
+      type: apiKey
 externalDocs:
   description: ""
   url: ""
@@ -35,6 +42,21 @@ info:
   version: ""
 openapi: 3.1.0
 paths:
+  /api/health/:
+    get:
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                type: string
+            text/plain:
+              schema:
+                type: string
+          description: OK
+      summary: Ping
+      tags:
+      - Health
   /api/todo/{id}:
     delete:
       parameters:
@@ -49,7 +71,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/domain.Todo'
+                $ref: '#/components/schemas/response.TodoRes'
           description: OK
         "404":
           content:
@@ -73,7 +95,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/domain.Todo'
+                $ref: '#/components/schemas/response.TodoRes'
           description: OK
         "404":
           content:
@@ -104,7 +126,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/domain.Todo'
+                $ref: '#/components/schemas/response.TodoRes'
           description: OK
         "404":
           content:
@@ -123,7 +145,7 @@ paths:
             application/json:
               schema:
                 items:
-                  $ref: '#/components/schemas/domain.Todo'
+                  $ref: '#/components/schemas/response.TodoRes'
                 type: array
           description: OK
         "500":
@@ -149,7 +171,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/domain.Todo'
+                $ref: '#/components/schemas/response.TodoRes'
           description: OK
         "500":
           content:
